chot nguong support 0.01

--- a/notebooks/runs/apriori_modelling_run.ipynb
+++ b/notebooks/runs/apriori_modelling_run.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "eebe8cf9",
    "metadata": {
     "execution": {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "410d2659",
    "metadata": {
     "execution": {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9685423d",
    "metadata": {
     "execution": {
@@ -168,7 +168,19 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'apriori_library'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 27\u001b[39m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Biểu đồ tương tác HTML\u001b[39;00m\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotly\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexpress\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpx\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mapriori_library\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AssociationRulesMiner, DataVisualizer  \u001b[38;5;66;03m# classes trong library của bạn\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'apriori_library'"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e8cfa865",
    "metadata": {
     "execution": {
@@ -246,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "58e0a6c0",
    "metadata": {
     "execution": {
@@ -289,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f3992c07",
    "metadata": {
     "execution": {
@@ -632,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9582563b",
    "metadata": {
     "execution": {
@@ -795,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cf7b0589",
    "metadata": {
     "execution": {
@@ -883,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1fc862aa",
    "metadata": {
     "execution": {
@@ -1093,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "995f05cf",
    "metadata": {
     "execution": {
@@ -1300,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2ba694bf",
    "metadata": {
     "execution": {
@@ -1325,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bed9b320",
    "metadata": {
     "execution": {
@@ -1384,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a95aa523",
    "metadata": {
     "execution": {
@@ -1426,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "60b2f3aa",
    "metadata": {
     "execution": {
@@ -1475,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "16546fde",
    "metadata": {
     "execution": {
@@ -1517,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "7819ee9b",
    "metadata": {
     "execution": {
@@ -1561,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "629087bb",
    "metadata": {
     "execution": {
@@ -1643,6 +1655,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -1673,7 +1690,7 @@
     "MAX_LEN": 3,
     "METRIC": "lift",
     "MIN_SUPPORT": 0.02,
-    "MIN_THRESHOLD": 1.0,
+    "MIN_THRESHOLD": 1,
     "PLOT_NETWORK": false,
     "PLOT_PLOTLY_SCATTER": false,
     "PLOT_SCATTER": false,
